<resources>
    <string name="app_name">ListaCompras</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Incluir">Incluir Item</string>
    <string name="Excluir">Excluir Item</string>
    <string name="Alterar">Alterar Item</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="senhaconfirma">Confirma Senha</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_lista_compras">ListaComprasActivity</string>
    <string name="title_activity_cadastrar_usuario">CadastrarUsuarioActivity</string>
    <string name="title_activity_novo_edicao">NovoEdicaoActivity</string>
    <string name="menu_add">Adicionar</string>

</resources>
